kanc/src/tests/sample_code/should_fail/multi_file/bind/visibility_stricter_than_transparency/src/mod.k
pub type Nat {
    o: Nat,
    s(n: Nat): Nat,
}

let(*) _0 = Nat.o;
